✨ Feat: 훈련 커리큘럼 생성 기능 구현 #38